--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
                       <option value="=">=</option>
                     </select>
                     <input type="submit" name= "form" value="Submit" />
+                    <input type="submit" name= "form" value="SubmitCache" />
                 </form>
             </p>
         </div>
@@ -30,7 +31,10 @@
             <p>
                 <form action="/queryDB" method="post">
                     Enter number of queries: <input type="text" name="qcount">
+                    Start Magnitude: <input type="text" name="smag">
+                    End Magnitude: <input type="text" name="emag">
                     <input type="submit" name= "form" value="Submit2" />
+                    <input type="submit" name= "form" value="SubmitCache2" />
                 </form>
             </p>
         </div>
