--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script type="text/javascript" src="http://kozea.github.com/pygal.js/latest/pygal-tooltips.min.js"></script>
         <title>
             Query the Earthquake Data
         </title>
@@ -38,5 +39,6 @@
                 </form>
             </p>
         </div>
+        <embed type="image/svg+xml" src= {{ chart|safe }} />
     </body>
 </html>
