Added quiz questions4

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,7 @@
             <p>
                 <form action="/queryDB" method="post">
                     Enter 2 letter state: <input type="text" name="stateCode">
+                    FREQ: <input type="text" name="freq1">
                     <input type="submit" name= "form" value="ShowCountyCount" />
                 </form>
             </p>
@@ -106,6 +107,7 @@
                     Enter Year: <input type="text" name="stateYear">
                     POP1: <input type="text" name="statepop1">
                     POP2: <input type="text" name="statepop2">
+                    FREQ: <input type="text" name="freq2">
                     <input type="submit" name= "form" value="ShowState" />
                 </form>
             </p>
