Added quiz questions5

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,7 @@
                     Enter 2 letter state: <input type="text" name="stateCode">
                     FREQ: <input type="text" name="freq1">
                     <input type="submit" name= "form" value="ShowCountyCount" />
+                    <input type="submit" name= "form" value="ShowCountyCountCache" />
                 </form>
             </p>
         </div>
@@ -109,6 +110,7 @@
                     POP2: <input type="text" name="statepop2">
                     FREQ: <input type="text" name="freq2">
                     <input type="submit" name= "form" value="ShowState" />
+                    <input type="submit" name= "form" value="ShowStateCache" />
                 </form>
             </p>
         </div>
