--- a/templates/index.html
+++ b/templates/index.html
@@ -183,6 +183,16 @@
                 </form>
             </p>
         </div>
+        <div style="background-color:lightcyan">
+            <h3>BLPerc</h3>
+            <p>
+                <form action="/barchart" method="post">
+                    Code: <input type="text" name="q3code">
+                    Range1: <input type="text" name="q3r11"> <input type="text" name="q3r12">
+                    <input type="submit" name= "form" value="ShowGraph9" />
+                </form>
+            </p>
+        </div>
 {#        <embed type="image/svg+xml" src= {{ chart|safe }} />#}
     </body>
 </html>
