--- a/templates/index.html
+++ b/templates/index.html
@@ -193,6 +193,16 @@
                 </form>
             </p>
         </div>
+        <div style="background-color:lightcyan">
+            <h3>BLPerc</h3>
+            <p>
+                <form action="/barchart" method="post">
+                    Year: <input type="text" name="q1year">
+                    Step: <input type="text" name="q1r11">
+                    <input type="submit" name= "form" value="ShowGraph10" />
+                </form>
+            </p>
+        </div>
 {#        <embed type="image/svg+xml" src= {{ chart|safe }} />#}
     </body>
 </html>
